--- a/package.json
+++ b/package.json
@@ -18,21 +18,20 @@
     "coverage": "http-server coverage/lcov-report/"
   },
   "dependencies": {
-    "@cork-labs/mixin-emitter": "^0.1.0",
-    "mongoose": "^5.0.8",
-    "mockgoose": "^7.3.5"
+    "@cork-labs/mixin-emitter": "^0.1.3",
+    "mongoose": "^5.0.8"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.18.1",
+    "chai": "^4.2.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "istanbul": "^0.4.5",
-    "mocha": "^5.0.1",
-    "sinon": "^4.4.2",
+    "mocha": "^5.2.0",
+    "sinon": "^4.5.0",
     "sinon-chai": "^2.14.0"
   }
 }
