--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@cork-labs/mixin-emitter": "^0.1.3",
+    "mongodb-memory-server": "^2.9.1",
     "mongoose": "^5.0.8"
   },
   "devDependencies": {
